# Fibonacci

./: CMakeLists.txt  fibonacci.cpp  fibonacci.h  readme.md
tests/: tests.cpp
